--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "vue": "^2.6.12",
     "vue-loader": "^15.9.6",
     "vue-router": "^3.5.1",
-    "vue-template-compiler": "^2.6.12"
+    "vue-template-compiler": "^2.6.12",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.11.2"
