--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@rails/webpacker": "5.2.1",
     "axios": "^0.21.1",
     "vue": "^2.6.12",
+    "vue-axios": "^3.2.4",
     "vue-loader": "^15.9.6",
     "vue-router": "^3.5.1",
     "vue-template-compiler": "^2.6.12",
